# ansible-guhcampos-roles

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
ansible/guhcampos/: galaxy.yml  guhcampos
cookiecutter/contexts/: archivebox.yaml  bazaar.yaml  grafana.yaml  heimdall.yaml  homarr.yaml  jellyfin.yaml  mariadb.yaml  netdata.yaml  nginx.yaml  pihole.yaml  portainer.yaml  prefect.yaml  prowlarr.yaml  qbittorrent.yaml  radarr.yaml  rclone.yaml  redis.yaml  scrutiny.yaml  sonarr.yaml  swag.yaml  syncthing.yaml  transmission.yaml  youtubedl.yaml
roles/guhcampos.docker-activepieces/: README.md
roles/guhcampos.docker-archivebox/: README.md
roles/guhcampos.docker-bazarr/: README.md
roles/guhcampos.docker-grafana/: README.md
roles/guhcampos.docker-heimdall/: README.md
roles/guhcampos.docker-jellyfin/: README.md
roles/guhcampos.docker-mariadb/: README.md
roles/guhcampos.docker-netdata/: README.md
roles/guhcampos.docker-nextcloud/: README.md
roles/guhcampos.docker-nginx/: README.md
roles/guhcampos.docker-photonix/: README.md
roles/guhcampos.docker-portainer/: README.md
roles/guhcampos.docker-prowlarr/: README.md
roles/guhcampos.docker-qbittorrent/: README.md
roles/guhcampos.docker-radarr/: README.md
roles/guhcampos.docker-rclone/: README.md
roles/guhcampos.docker-redis/: README.md
roles/guhcampos.docker-scrutiny/: README.md  docker-scrutiny.nginx.subdomain.conf.j2
roles/guhcampos.docker-sonarr/: README.md
roles/guhcampos.docker-syncthing/: README.md
roles/guhcampos.docker-transmission/: README.md
(+712 files in other folders)
